--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,8 @@ dependencies:
   go_router: ^5.1.0
   flutter_bloc: ^8.1.1
   equatable: ^2.0.5
+  firebase_analytics: ^9.3.8
+  firebase_crashlytics: ^2.9.0
   
 
 dev_dependencies:
