--- a/packages/api/pubspec.yaml
+++ b/packages/api/pubspec.yaml
@@ -1,5 +1,5 @@
-name: home_page
-description: Contains the home page of the app and it lets the users choose their available ingredients
+name: api
+description: All the APIs that fetch the necesarry data for the app
 version: 0.0.1
 homepage:
 publish_to: none
@@ -11,28 +11,12 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  component_library:
-    path: ../../component_library
 
   models:
-    path: ../../models
-  
-  api:
-    path: ../../api
+    path: ../models
 
   monitoring:
-    path: ../../monitoring
-
-  flutter_localizations:
-    sdk: flutter
-  intl: ^0.17.0
-  flutter_bloc: ^8.1.1
-  firebase_core: ^2.1.1
-  cloud_firestore: ^4.0.3
-  equatable: ^2.0.5
-  go_router: ^5.1.2
-  lottie: ^1.4.3
-  
+    path: ../monitoring
 
 dev_dependencies:
   flutter_test:
@@ -44,7 +28,7 @@ dev_dependencies:
 
 # The following section is specific to Flutter packages.
 flutter:
-  
+
   # To add assets to your package, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
