--- a/packages/features/recipe_search/pubspec.yaml
+++ b/packages/features/recipe_search/pubspec.yaml
@@ -1,5 +1,5 @@
-name: home_page
-description: Contains the home page of the app and it lets the users choose their available ingredients
+name: recipe_search
+description: A new Flutter package project.
 version: 0.0.1
 homepage:
 publish_to: none
@@ -9,30 +9,20 @@ environment:
   flutter: ">=1.17.0"
 
 dependencies:
+  equatable: ^2.0.5
   flutter:
     sdk: flutter
+  flutter_bloc: ^8.1.1
+
   component_library:
     path: ../../component_library
-
-  models:
-    path: ../../models
   
   api:
     path: ../../api
 
-  monitoring:
-    path: ../../monitoring
-
-  flutter_localizations:
-    sdk: flutter
-  intl: ^0.17.0
-  flutter_bloc: ^8.1.1
-  firebase_core: ^2.1.1
-  cloud_firestore: ^4.0.3
-  equatable: ^2.0.5
-  go_router: ^5.1.2
+  models:
+    path: ../../models
   lottie: ^1.4.3
-  
 
 dev_dependencies:
   flutter_test:
@@ -46,7 +36,8 @@ dev_dependencies:
 flutter:
   
   # To add assets to your package, add an assets section, like this:
-  # assets:
+  assets:
+    - assets/animations/
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
   #
