--- a/packages/features/recipe_search/pubspec.yaml
+++ b/packages/features/recipe_search/pubspec.yaml
@@ -15,7 +15,7 @@ dependencies:
   flutter_localizations:
     sdk: flutter
   intl: ^0.17.0
-
+  fl_chart: ^0.55.2
   flutter_bloc: ^8.1.1
 
   component_library:
