--- a/packages/features/recipe_search/pubspec.yaml
+++ b/packages/features/recipe_search/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
     path: ../../models
   lottie: ^1.4.3
   go_router: ^5.2.3
+  flutter_svg: ^1.1.6
 
 dev_dependencies:
   flutter_test:
@@ -44,6 +45,7 @@ flutter:
   # To add assets to your package, add an assets section, like this:
   assets:
     - assets/animations/
+    - assets/img/
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
   #
